fix message count calculation

--- a/prometheus-jmx-exporter/confd/templates/kafka.yml.tmpl
+++ b/prometheus-jmx-exporter/confd/templates/kafka.yml.tmpl
@@ -18,4 +18,5 @@ rules:
 - pattern : kafka.cluster<type=Partition, name=UnderReplicated, topic=(.+), partition=(.+)><>Value
 - pattern : kafka.utils<type=Throttler, name=cleaner-io><>OneMinuteRate
 - pattern : kafka.log<type=Log, name=LogEndOffset, topic=(.+), partition=(.+)><>Value
+- pattern : kafka.log<type=Log, name=LogStartOffset, topic=(.+), partition=(.+)><>Value
 - pattern : java.lang<type=(.*)>
